Mise à jour de l'internationalisation et des traductions

--- a/translations/en.json
+++ b/translations/en.json
@@ -165,7 +165,9 @@
     "upload_file": "Upload a PDF file",
     "file_placeholder": "Choose a PDF file",
     "process": "Process file",
-    "download_result": "Download result"
+    "download_result": "Download result",
+    "drag_drop": "Drag and drop your PDF here",
+    "click_select": "or click to select a file"
   },
   "unimpose": {
     "title": "Unimpose a PDF",
@@ -173,7 +175,12 @@
     "upload_file": "Upload a PDF file",
     "file_placeholder": "Choose a PDF file",
     "process": "Process file",
-    "download_result": "Download result"
+    "download_result": "Download result",
+    "drag_drop": "Drag your PDF here",
+    "click_select": "or click to select a file",
+    "select_pdf": "Select PDF",
+    "unimpose_pdf": "Unimpose PDF",
+    "cancel": "Cancel"
   },
   "imposition_tracts": {
     "title": "Tract Imposition",
@@ -181,7 +188,10 @@
     "upload_file": "Upload a PDF file",
     "file_placeholder": "Choose a PDF file",
     "process": "Process file",
-    "download_result": "Download result"
+    "download_result": "Download result",
+    "drag_drop": "Drag and drop your tract PDF here",
+    "click_select": "or click to select a file",
+    "select_tract": "Choose a tract PDF"
   },
   "png_to_pdf": {
     "title": "Images to PDF",
@@ -192,7 +202,23 @@
     "a3": "A3",
     "a4": "A4",
     "process": "Process images",
-    "download_result": "Download PDF"
+    "download_result": "Download PDF",
+    "drag_drop": "Drag your images here",
+    "click_select": "or click to select files",
+    "select_images": "Select images",
+    "file_info": "PNG, JPG - Maximum 50MB per file - Multiple images create a multi-page PDF",
+    "orientation": "Orientation",
+    "portrait": "Portrait",
+    "landscape": "Landscape",
+    "images_selected": "image(s) selected",
+    "create_pdf": "Create PDF",
+    "back_home": "Back to home",
+    "how_it_works": "How it works?",
+    "format_a4": "A4 Format: Ideal for standard printing (210 × 297 mm)",
+    "format_a3": "A3 Format: For large posters (297 × 420 mm)",
+    "multi_images": "Multi-images: Each image will be placed on a separate page",
+    "auto_fit": "Automatic adjustment: Images are resized to fit the format",
+    "tip": "Tip: For a double-sided flyer, create 2 images and convert them to a 2-page PDF."
   },
   "pdf_to_png": {
     "title": "PDF to Images",
@@ -200,7 +226,18 @@
     "upload_file": "Upload a PDF file",
     "file_placeholder": "Choose a PDF file",
     "process": "Process file",
-    "download_result": "Download images"
+    "download_result": "Download images",
+    "drag_drop": "Drag your PDF here",
+    "click_select": "or click to select a file",
+    "select_file": "Select PDF",
+    "file_info": "PDF - Maximum 50MB",
+    "quality": "Quality",
+    "high": "High (300 DPI)",
+    "medium": "Medium (150 DPI)",
+    "low": "Low (72 DPI)",
+    "high_desc": "- Excellent quality, large files",
+    "medium_desc": "- Good quality/size balance",
+    "low_desc": "- Fast, lightweight files"
   },
   "riso_separator": {
     "title": "Riso Separator",
@@ -213,7 +250,10 @@
     "color_selection": "Selection",
     "color": "Color",
     "process": "Process file",
-    "download_result": "Download separations"
+    "download_result": "Download separations",
+    "drag_drop": "Drag your image here",
+    "click_select": "or click to select",
+    "select_image": "Select an image"
   },
   "taux_remplissage": {
     "title": "Fill Rate",
@@ -225,14 +265,27 @@
     "process": "Analyze file",
     "preview": "Preview",
     "fill_rate": "Fill rate",
-    "download_result": "Download report"
+    "download_result": "Download report",
+    "drag_drop": "Drag your PDF or image here",
+    "click_select": "or click to select a file",
+    "select_file": "Select file",
+    "file_info": "PDF, JPEG, PNG or GIF - Maximum 50MB"
   },
   "aide_machines": {
-    "title": "Help & Tutorials",
-    "subtitle": "Documentation and help for machines",
-    "machine_help": "Help by machine",
-    "tutorials": "Tutorials",
-    "documentation": "Documentation"
+    "title": "Help & Machine Q&A",
+    "search_machine": "Search machine",
+    "select_machine": "Select machine",
+    "choose_machine": "-- Choose machine --",
+    "consult_qa": "Consult Q&A",
+    "qa_for_machine": "Questions & Answers for",
+    "no_qa_available": "No Q&A available",
+    "no_qa_available_desc": "Contact the administrator to add questions and answers for this machine.",
+    "all_qa_available": "All Available Questions & Answers",
+    "no_qa_yet": "No questions and answers are available for the machines yet.",
+    "no_qa_yet_desc": "Contact the administrator to add help information.",
+    "navigation": "Navigation",
+    "back_to_home": "Back to home",
+    "new_print": "New Print"
   },
   "setup": {
     "title": "Setup",
@@ -266,10 +319,11 @@
     "previous": "Previous",
     "search": "Search",
     "filter": "Filter",
+    "download": "Download",
+    "download_all_zip": "Download all as ZIP",
     "refresh": "Refresh",
     "export": "Export",
     "import": "Import",
-    "download": "Download",
     "upload": "Upload",
     "view": "View",
     "add": "Add",
@@ -321,5 +375,54 @@
     "inches": "inches",
     "points": "points",
     "pixels": "pixels"
+  },
+  "tirage_multimachines": {
+    "title": "Multi-Machine Printing",
+    "subtitle": "Record your print job on all available machines",
+    "form_title": "Multi-Print Form",
+    "contact": "Contact",
+    "contact_help": "An email, explicit username",
+    "tirages": "Print Jobs",
+    "tirage_number": "Print Job #",
+    "duplicopieur": "Duplicator",
+    "photocopieur": "Photocopier",
+    "supports_a3_a4": "Supports A3 and A4",
+    "tambour_used": "Drum used",
+    "choose_tambour": "Choose the drum used for this print job",
+    "options": "Options",
+    "format_a4": "A4 Format",
+    "recto_verso": "Duplex",
+    "sheets_already_paid": "Sheets already paid",
+    "input_mode": "Input mode",
+    "input_type": "Input type",
+    "counters_before_after": "Counters (before/after)",
+    "masters_and_passes": "Masters and passes",
+    "counters_before": "BEFORE Counters",
+    "masters": "Masters",
+    "passes": "Passes",
+    "counters_after": "AFTER Counters",
+    "masters_used": "Masters",
+    "passes_done": "Passes",
+    "masters_number": "Number used",
+    "passes_number": "Number performed",
+    "photocopier": "Photocopier",
+    "which_photocopier": "Which photocopier are you using?",
+    "brochures_tracts": "Brochures/Flyers to print",
+    "number_copies": "Number of copies",
+    "copies_question": "How many identical copies?",
+    "sheets_per_copy": "Sheets per copy",
+    "pages_per_copy": "Pages per copy",
+    "total_sheets": "Total sheets",
+    "sheets_calculation": "sheet (copies × sheets/copy)",
+    "size": "Size",
+    "color": "Color",
+    "fill_rate_color": "Color fill rate",
+    "adjust_fill_rate": "Adjust the color fill rate (0% = very light, 100% = very dark)",
+    "price_this_tirage": "Price of this print job",
+    "add_tirage": "Add a print job",
+    "summary": "Print job summary",
+    "total_price": "Total price:",
+    "next": "Next",
+    "previous": "Previous"
   }
 }
