--- a/translations/fr.json
+++ b/translations/fr.json
@@ -417,7 +417,9 @@
     "upload_file": "Télécharger un fichier PDF",
     "file_placeholder": "Choisir un fichier PDF",
     "process": "Traiter le fichier",
-    "download_result": "Télécharger le résultat"
+    "download_result": "Télécharger le résultat",
+    "drag_drop": "Glissez-déposez votre PDF ici",
+    "click_select": "ou cliquez pour sélectionner un fichier"
   },
   "unimpose": {
     "title": "Désimposer un PDF",
@@ -425,7 +427,12 @@
     "upload_file": "Télécharger un fichier PDF",
     "file_placeholder": "Choisir un fichier PDF",
     "process": "Traiter le fichier",
-    "download_result": "Télécharger le résultat"
+    "download_result": "Télécharger le résultat",
+    "drag_drop": "Glissez votre PDF ici",
+    "click_select": "ou cliquez pour sélectionner un fichier",
+    "select_pdf": "Sélectionner un PDF",
+    "unimpose_pdf": "Désimposer le PDF",
+    "cancel": "Annuler"
   },
   "imposition_tracts": {
     "title": "Imposition de Tracts",
@@ -433,7 +440,10 @@
     "upload_file": "Télécharger un fichier PDF",
     "file_placeholder": "Choisir un fichier PDF",
     "process": "Traiter le fichier",
-    "download_result": "Télécharger le résultat"
+    "download_result": "Télécharger le résultat",
+    "drag_drop": "Glissez-déposez votre tract PDF ici",
+    "click_select": "ou cliquez pour sélectionner un fichier",
+    "select_tract": "Choisir un tract PDF"
   },
   "png_to_pdf": {
     "title": "Images vers PDF",
@@ -444,7 +454,23 @@
     "a3": "A3",
     "a4": "A4",
     "process": "Traiter les images",
-    "download_result": "Télécharger le PDF"
+    "download_result": "Télécharger le PDF",
+    "drag_drop": "Glissez vos images ici",
+    "click_select": "ou cliquez pour sélectionner des fichiers",
+    "select_images": "Sélectionner des images",
+    "file_info": "PNG, JPG - Maximum 50MB par fichier - Plusieurs images créent un PDF multi-pages",
+    "orientation": "Orientation",
+    "portrait": "Portrait",
+    "landscape": "Paysage",
+    "images_selected": "image(s) sélectionnée(s)",
+    "create_pdf": "Créer le PDF",
+    "back_home": "Retour à l'accueil",
+    "how_it_works": "Comment ça marche ?",
+    "format_a4": "Format A4 : Idéal pour impression standard (210 × 297 mm)",
+    "format_a3": "Format A3 : Pour grandes affiches (297 × 420 mm)",
+    "multi_images": "Multi-images : Chaque image sera placée sur une page séparée",
+    "auto_fit": "Ajustement automatique : Les images sont redimensionnées pour s'adapter au format",
+    "tip": "Astuce : Pour un tract recto-verso, créez 2 images et convertissez-les en PDF 2 pages."
   },
   "pdf_to_png": {
     "title": "PDF vers Images",
@@ -452,13 +478,27 @@
     "upload_file": "Télécharger un fichier PDF",
     "file_placeholder": "Choisir un fichier PDF",
     "process": "Traiter le fichier",
-    "download_result": "Télécharger les images"
+    "download_result": "Télécharger les images",
+    "drag_drop": "Glissez votre PDF ici",
+    "click_select": "ou cliquez pour sélectionner un fichier",
+    "select_file": "Sélectionner un PDF",
+    "file_info": "PDF - Maximum 50MB",
+    "quality": "Qualité",
+    "high": "Haute (300 DPI)",
+    "medium": "Moyenne (150 DPI)",
+    "low": "Basse (72 DPI)",
+    "high_desc": "- Excellente qualité, fichiers volumineux",
+    "medium_desc": "- Bon compromis qualité/taille",
+    "low_desc": "- Rapide, fichiers légers"
   },
   "riso_separator": {
     "title": "Séparateur Riso",
     "subtitle": "Séparer couleurs pour multi-tambours",
     "upload_file": "Télécharger un fichier PDF",
     "file_placeholder": "Choisir un fichier PDF",
+    "drag_drop": "Glissez votre image ici",
+    "click_select": "ou cliquez pour sélectionner",
+    "select_image": "Sélectionner une image",
     "opacity": "Opacité",
     "tolerance": "Tolérance",
     "tolerance_desc": "La tolérance détermine quels pixels sont considérés comme \"blancs\" (vides). Une valeur de 245 est recommandée.",
@@ -472,19 +512,16 @@
     "subtitle": "Calculer le % d'encre utilisé",
     "upload_file": "Télécharger un fichier PDF",
     "file_placeholder": "Choisir un fichier PDF",
+    "drag_drop": "Glissez votre PDF ou image ici",
+    "click_select": "ou cliquez pour sélectionner un fichier",
+    "select_file": "Sélectionner un fichier",
+    "file_info": "PDF, JPEG, PNG ou GIF - Maximum 50MB",
     "tolerance": "Tolérance",
     "tolerance_desc": "La tolérance détermine quels pixels sont considérés comme \"blancs\" (vides). Une valeur de 245 est recommandée.",
     "process": "Analyser le fichier",
     "preview": "Aperçu",
     "fill_rate": "Taux de remplissage",
     "download_result": "Télécharger le rapport"
-  },
-  "aide_machines": {
-    "title": "Aide & Tutoriels",
-    "subtitle": "Documentation et aide pour les machines",
-    "machine_help": "Aide par machine",
-    "tutorials": "Tutoriels",
-    "documentation": "Documentation"
   },
   "setup": {
     "title": "Configuration",
@@ -518,10 +555,11 @@
     "previous": "Précédent",
     "search": "Rechercher",
     "filter": "Filtrer",
+    "download": "Télécharger",
+    "download_all_zip": "Télécharger tout en ZIP",
     "refresh": "Actualiser",
     "export": "Exporter",
     "import": "Importer",
-    "download": "Télécharger",
     "upload": "Téléverser",
     "view": "Voir",
     "add": "Ajouter",
@@ -573,5 +611,54 @@
     "inches": "pouces",
     "points": "points",
     "pixels": "pixels"
+  },
+  "tirage_multimachines": {
+    "title": "Tirage Multi-Machines",
+    "subtitle": "Enregistre ton tirage sur toutes les machines disponibles",
+    "form_title": "Formulaire Multi-Tirages",
+    "contact": "Contact",
+    "contact_help": "Un mail, pseudo explicite",
+    "tirages": "Tirages",
+    "tirage_number": "Tirage #",
+    "duplicopieur": "Duplicopieur",
+    "photocopieur": "Photocopieur",
+    "supports_a3_a4": "Supporte A3 et A4",
+    "tambour_used": "Tambour utilisé",
+    "choose_tambour": "Choisissez le tambour utilisé pour ce tirage",
+    "options": "Options",
+    "format_a4": "Format A4",
+    "recto_verso": "Recto/verso",
+    "sheets_already_paid": "Feuilles déjà payées",
+    "input_mode": "Mode de saisie",
+    "input_type": "Type de saisie",
+    "counters_before_after": "Compteurs (avant/après)",
+    "masters_and_passes": "Masters et passages",
+    "counters_before": "Compteurs AVANT",
+    "masters": "Masters",
+    "passes": "Passages",
+    "counters_after": "Compteurs APRÈS",
+    "masters_used": "Masters",
+    "passes_done": "Passages",
+    "masters_number": "Nombre utilisé",
+    "passes_number": "Nombre effectué",
+    "photocopier": "Photocopieuse",
+    "which_photocopier": "Quelle photocopieuse utilisez-vous ?",
+    "brochures_tracts": "Brochures/Tracts à imprimer",
+    "number_copies": "Nombre d'exemplaires",
+    "copies_question": "Combien de copies identiques ?",
+    "sheets_per_copy": "Feuilles par exemplaire",
+    "pages_per_copy": "Pages par copie",
+    "total_sheets": "Total feuilles",
+    "sheets_calculation": "feuille (exemplaires × feuilles/ex.)",
+    "size": "Taille",
+    "color": "Couleur",
+    "fill_rate_color": "Taux de remplissage couleur",
+    "adjust_fill_rate": "Ajustez le taux de remplissage des couleurs (0% = très léger, 100% = très foncé)",
+    "price_this_tirage": "Prix de ce tirage",
+    "add_tirage": "Ajouter un tirage",
+    "summary": "Récapitulatif du tirage",
+    "total_price": "Prix total :",
+    "next": "Suivant",
+    "previous": "Précédent"
   }
 }
